--- a/style.css
+++ b/style.css
@@ -175,6 +175,7 @@ main {
   position: relative;
   bottom: 6.1rem;
   left: 15rem;
+  display: none;
 }
 
 #line-work {
@@ -184,6 +185,7 @@ main {
   animation-timing-function: ease-in;
   position: relative;
   bottom: 0.5rem;
+  display: none;
   /* left: -12.4rem; */
 }
 #line-contact {
