--- a/style.css
+++ b/style.css
@@ -100,22 +100,7 @@ a:visited {
   color:#8b7dff;
   cursor: none;
 }
-/* #contact-button {
-  color: #f46c4e;
-}
-#about-button {
-  color: #af8e00;
-}
-#work-button {
-  color:#009782
-} */
-/* #home-logo {
-  float: left;
-  max-width: 25px;
-  padding: 1.6rem 1rem;
-  position: absolute;
-  z-index: 99;
-} */
+
 .strike-through {
   display: block;
   position: relative;
@@ -300,7 +285,6 @@ main .about {
   width: 0;
   font-size: 2rem;
   opacity: 0;
-  color: #00b0b6;
   animation: port 3s 1 forwards;
   -webkit-animation: port 3s 1 forwards;
 }
@@ -445,8 +429,6 @@ div:hover p {
   right: -27%;
   position: relative;
   bottom: 7.7rem;
-  color: #3d3dff;
-  background-color: #ffd5fa;
   text-align: center;
   padding: 5px;
 }
@@ -571,6 +553,8 @@ div:hover p {
   top: 3rem;
   left: -3rem;
   letter-spacing: 6px;
+  font-family: 'Karla', sans-serif
+  /* color: #978a00; */
 }
 #flashcards a:visited {
   color: #000;
@@ -592,38 +576,34 @@ div:hover p {
   height: 100%;
 }
 #flashcard-overlay {
-  background-color: rgba(228, 228, 228, 0.52);
+  background-color: rgba(222, 222, 222, 0.31);
 }
+/* #flashcard-overlay:hover {
+  background-color: rgba(246, 191, 255, 0.5);
+} */
 #budget-overlay {
-  background-color: rgba(228, 228, 228, 0.81);
+  background-color: rgba(224, 224, 224, 0.83);
 }
+/* #budget-overlay:hover {
+  background-color: rgb(255, 117, 87, 0.4);
+} */
 #budget {
   top: 5rem;
-  color: #000;
+  /* color: #3d3dff; */
+  color: #000
 }
 #budget a:visited {
   color: #000;
 }
 #budget-header {
   position: absolute;
-  left: 5rem;
-  top: 4.5rem;
+  left: 15.5rem;
+  top: 1.9rem;
+  width: 10rem;
   font-size: 3.4rem;
   letter-spacing: 6px;
+  font-family: 'Karla', sans-serif;
 }
-
-/* svg {
-  width: 500px;
-  height: 500px;
-}
-
-rect.hbar {
-  mask: url(#mask-stripe)
-}
-
-.fillColor {
-  fill: blue;
-} */
 
 
 /* CONTACT  */
