--- a/style.css
+++ b/style.css
@@ -162,6 +162,7 @@ main {
   animation-timing-function: ease-in;
   position: relative;
   bottom: 0.5rem;
+  stroke-width: 3;
   /* left: 15rem; */
 }
 
@@ -173,6 +174,7 @@ main {
   animation-timing-function: ease-in;
   position: relative;
   bottom: 0.5rem;
+  stroke-width: 3;
   /* left: -12.4rem; */
 }
 #line-contact {
@@ -183,6 +185,7 @@ main {
   animation-timing-function: ease-in;
   position: relative;
   bottom: 0.5rem;
+  stroke-width: 3;
 }
 #line-vertical{
   stroke-dasharray: 1000;
@@ -525,7 +528,9 @@ div:hover p {
   text-align: right;
   margin: 0;
   top: -5rem;
-  color: #4f4fff
+  color: #f46c4e;
+  background-color: #cfd2ff;
+  padding: 0 20px 20px;
 }
 #skills-text {
   font-size: 2rem;
@@ -544,6 +549,11 @@ div:hover p {
   font-size: 2rem;
   margin: 4rem 2rem 6rem 0rem;
   letter-spacing: 6px;
+}
+#selected-p {
+  font-size: 1.5rem;
+  margin: 0 0 4rem 0;
+  width: 17rem;
 }
 #flashcards {
   width: 35%;
@@ -582,7 +592,7 @@ div:hover p {
   background-color: rgba(246, 191, 255, 0.5);
 } */
 #budget-overlay {
-  background-color: rgba(224, 224, 224, 0.83);
+  background-color: rgba(224, 224, 224, 0.84);
 }
 /* #budget-overlay:hover {
   background-color: rgb(255, 117, 87, 0.4);
