--- a/style.css
+++ b/style.css
@@ -5,10 +5,7 @@
   text-decoration: none;
 }
 html {
-  /* background-color: #af8e00; */
-  background-color: #fff;
-  /* background-color: #d1d1c4; */
-  /* background-color: #fffcf1; */
+  background-color: #ffe7de;
   box-sizing: border-box;
   height:100%;
   cursor: none;
@@ -37,7 +34,7 @@ body {
 }
 
 .color-white {
-  background-color: #fff;
+  background-color: #ffe7de;
   color: #000;
   stroke: #000;
 }
@@ -66,8 +63,6 @@ body {
 
 /* NAV MENU */
 .navigation-menu {
-  /* width: 1rem;
-  text-align: left; */
   position: fixed;
   top: 45%;
   left: -9rem;
@@ -572,8 +567,8 @@ div:hover p {
   color: #000;
 }
 .project-image {
-  width: 300px;
-  height: 200px;
+  width: 0;
+  height: 0;
 }
 #flashcards-image {
   background: url('./images/flashcards_image.jpg') no-repeat center;
@@ -612,8 +607,9 @@ div:hover p {
 #budget-header {
   position: absolute;
   left: 5.5rem;
-  top: 4.9rem;
-  width: 35rem;
+  top: 9.9rem;
+  width: 26rem;
+  text-align: justify;
   font-size: 3.4rem;
   letter-spacing: 6px;
   font-family: 'Karla', sans-serif;
