--- a/style.css
+++ b/style.css
@@ -28,7 +28,13 @@ body {
   height: 170vh;
 }
 
-.color-pink, .color-pink a:visited  {
+.color-pink {
+  background-color: #e6c1f0;
+  color: #ee6d56;
+  stroke: #ee6d56;
+} 
+
+.color-pink a:visited  {
   background-color: #e6c1f0;
   color: #ee6d56;
   stroke: #ee6d56;
@@ -99,14 +105,14 @@ li {
 }
 .navigation-menu ul li {
   font-size: 1.1rem;
-  color: #f46c4e;
+  color: #ee6d56;
   display: inline-block;
 }
 .navigation-menu ul li a {
   margin: 0 1.5rem;
 }
 a:visited {
-  color: #f46c4e;
+  color: #ee6d56;
 }
 #about-button,
 #work-button,
@@ -120,7 +126,7 @@ a:visited {
 }
 .strike-through:before,
 .strike-through:after {
-  background: #f46c4e;
+  background: #ee6d56;
   content: '';
   height: 2px;
   margin-top: -0.5px;
@@ -132,12 +138,12 @@ a:visited {
   left: -2.5px;
 }
 .strike-through:after {
-  background: #f46c4e;
+  background: #ee6d56;
   right: 2.5px;
   transition: width 0.8s cubic-bezier(0.22, 0.61, 0.36, 1);
 }
 .strike-through:hover:before {
-  background: #f46c4e;
+  background: #ee6d56;
   transition: width 0.8s cubic-bezier(0.22, 0.61, 0.36, 1);
   width: 100%;
 }
@@ -384,7 +390,7 @@ main .intro #hello {
   width: 11rem;
   float: right;
   cursor: none;
-  color: #f46c4e;
+  color: #ee6d56;
 }
 
 #about-text {
