--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ main {
 }
 
 #line-left {
-  stroke-width: 4;
+  stroke-width: 3;
   stroke-dasharray: 1000;
   stroke-dashoffset: 1000;
   animation: dash 3s linear forwards ;
@@ -172,7 +172,7 @@ main {
   animation-timing-function: ease-in;
   position: relative;
   bottom: 2rem;
-  stroke-width: 4;
+  stroke-width: 3;
   left: 400px;
 }
 
@@ -184,7 +184,7 @@ main {
   animation-timing-function: ease-in;
   position: relative;
   bottom: 0.5rem;
-  stroke-width: 4;
+  stroke-width: 3;
 }
 #line-contact {
   stroke-dasharray: 1000;
@@ -194,7 +194,7 @@ main {
   animation-timing-function: ease-in;
   position: relative;
   bottom: 0.5rem;
-  stroke-width: 4;
+  stroke-width: 3;
 }
 #line-vertical{
   stroke-dasharray: 1000;
@@ -204,7 +204,7 @@ main {
   position: relative;
   bottom: 25.7rem;
   left: 8rem;
-  stroke-width: 4;
+  stroke-width: 3;
 }
 
 @keyframes dash {
@@ -443,7 +443,7 @@ main .intro #hello {
 
 #work-panel {
   margin-top: 35rem;
-  height: 170vh;
+  height: 230vh;
 }
 #work-container {
   position: relative;
@@ -453,14 +453,19 @@ main .intro #hello {
   display: block;
   height: 40rem;
 }
+.main-selected-container {
+  display: flex;
+  align-items: center;
+  width: 42rem;
+  justify-content: space-between;
+
+}
 .skills-container {
   width: fit-content;
-  float: right;
   position: relative;
   text-align: right;
-  margin: 0;
-  top: 7rem;
-  left: 3rem;
+  margin: 4rem 0;
+  height:fit-content;
   border-style: solid;
   border-width: 2px;
   padding: 0 20px 20px;
@@ -471,85 +476,76 @@ main .intro #hello {
   padding: 1rem 0;
 }
 .project-container {
-  font-size: 3rem;
-  margin: 0 0 1rem 0;
-  position: relative;
+  font-size: 5.4rem;
+  margin: 4rem 0;
 }
 #selected-container {
   position: relative;
+  margin: 0;
 }
 #selected-header {
   font-size: 2.5rem;
-  margin: 4rem 0;
   letter-spacing: 6px;
+  width: 42rem;
 }
 #selected-p {
   font-size: 2rem;
-  margin: 0 0 4rem 0;
   width: 17rem;
   line-height: 1.3;
   font-weight: 100;
   line-height: 1.4;
   letter-spacing: 4px;
 }
+#projects {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
 #flashcards {
-  width: 35%;
+  /* width: 35%; */
+  cursor: none;
 }
 #flashcards-header {
-  position: absolute;
+  /* position: absolute;
   top: 3rem;
-  left: -3rem;
+  left: -3rem; */
+  width: 51rem;
+  display: flex;
+  border-bottom-style: solid;
+  border-bottom-width: 2px;
   letter-spacing: 6px;
   font-family: 'Karla', sans-serif;
 }
 #flashcards a:visited {
   color: inherit;
 }
-.project-image {
-  width: 0;
-  height: 0;
-}
-#flashcards-image {
-  background: url('./images/flashcards_image.jpg') no-repeat center;
-  background-size: cover;
-}
-#seeker-app-image {
-  background: url('./images/seeker-image.jpg') no-repeat center;
-  background-size: cover;
-}
-.image-overlay {
-  width: 100%;
-  height: 100%;
-}
-#flashcard-overlay {
-  background-color: rgba(222, 222, 222, 0.31);
-  /* background-color: rgba(255, 207, 197, 0.61); */
-}
-/* #flashcard-overlay:hover {
-  background-color: rgba(246, 191, 255, 0.5);
-} */
-#seeker-overlay {
-  background-color: rgba(224, 224, 224, 0.85);
-  /* background-color: rgba(255, 207, 197, 0.81); */
-}
-
 #seeker {
-  top: 5rem;
+  cursor: none;
 }
 #seeker a:visited {
   color: inherit;
 }
 #seeker-header {
-  position: absolute;
+  /* position: absolute;
   left: 5.5rem;
-  top: 9.9rem;
-  width: 26rem;
+  top: 9.9rem; */
+  /* width: 26rem; */
+  width: 51rem;
+  display: flex;
+  border-bottom-style: solid;
+  border-bottom-width: 2px;
   text-align: justify;
-  font-size: 3.4rem;
   letter-spacing: 6px;
   font-family: 'Karla', sans-serif;
 }
-
+.number {
+  font-size: 1.1rem;
+  font-family: 'snippet';
+  float: right;
+  padding: 5px;
+}
 
 /* CONTACT  */
 #contact-panel {
