--- a/style.css
+++ b/style.css
@@ -78,10 +78,29 @@ body {
 }
 
 /* NAV MENU */
+
+.am-nav {
+  width: fit-content;
+  position: fixed;
+  right: 40px;
+  top: 50px;
+  font-size: 1.3rem;
+  letter-spacing: 6px;
+  padding: 5px;
+  border-style: solid;
+  border-width: 2px;
+  font-family: 'Karla', sans-serif;
+  z-index: 99;
+}
+#am-button {
+  color: inherit;
+  margin-left: 5px;
+  cursor: none;
+}
 .navigation-menu {
   position: fixed;
-  top: 300px;
-  left: -9rem;
+  top: 290px;
+  left: -12rem;
   z-index: 99;
   height: auto;
 }
@@ -99,15 +118,16 @@ li {
 }
 .navigation-menu ul li {
   font-size: 1.1rem;
-  color: #ee6d56;
+  color: inherit;
   display: inline-block;
 }
 .navigation-menu ul li a {
-  margin: 0 1.5rem;
+  margin: 0 2.5rem;
 }
 a:visited {
-  color: #ee6d56;
+  color: inherit;
 }
+#am-button
 #about-button,
 #work-button,
 #contact-button {
@@ -289,24 +309,26 @@ main .about {
 }
 
 #hello-section {
-  font-family: 'Archivo', sans-serif;
+  font-family: 'Karla', sans-serif;
   height: 0;
   width: 0;
   font-size: 1rem;
   position: relative;
   top: -35.3rem;
   left: -17.7rem;
-  opacity: 0;
-  animation: port 3s 1 forwards;
-  -webkit-animation: port 3s 1 forwards;
+  opacity: 1;
 }
 #hello-text {
   position: relative;
   font-size: 4rem;
   top: 18.1rem;
   left: 5rem;
+  letter-spacing: 4px;
   font-weight: 400;
   color: #dbdbdb;
+  opacity: 1;
+  /* animation: text 3s 1 forwards;
+  -webkit-animation: text 3s 1 forwards; */
 }
 
 #hello-svg {
@@ -333,18 +355,10 @@ main .about {
 #main-hello:hover {
   cursor: none;
 }
-main .intro #hello {
-  font-size: 3.8rem;
-  letter-spacing: 2px;
-  position: relative;
-  z-index: 2;
-  /* color: #000; */
-  font-family: 'Archivo', serif;
-}
 
-@keyframes port {
+@keyframes text {
   0%{
-    transform: rotateY(90deg) translateY(25%);
+    transform: rotateY(90deg) translateY(0%);
     opacity: 0.0;
   }
   100%{
@@ -353,9 +367,9 @@ main .intro #hello {
   }
 }
 
-@-webkit-keyframes port {
+@-webkit-keyframes text {
   0%{
-   -webkit-transform: rotateY(90deg) translateY(25%);
+   -webkit-transform: rotateY(90deg) translateY(0%);
     opacity: 0.0;
   }
   100%{
@@ -522,9 +536,6 @@ main .intro #hello {
   cursor: none;
 }
 #flashcards-header {
-  /* position: absolute;
-  top: 3rem;
-  left: -3rem; */
   width: 51rem;
   display: flex;
   border-bottom-style: solid;
@@ -542,10 +553,6 @@ main .intro #hello {
   color: inherit;
 }
 #seeker-header {
-  /* position: absolute;
-  left: 5.5rem;
-  top: 9.9rem; */
-  /* width: 26rem; */
   width: 51rem;
   display: flex;
   border-bottom-style: solid;
@@ -601,5 +608,4 @@ main .intro #hello {
 h4 {
   font-size: 1.2rem;
   padding: 10px 0;
-  /* color: #4b4bd3; */
 }
